# ghana-legal-rag

Desktop/Codetrain/ai_codetrain/exercise/week1-top2-exercise1/: exercise1.ipynb
Desktop/Portfolio/rag-saas-chatbot/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  render.yaml
Desktop/Portfolio/rag-saas-chatbot/data/: ghana-labor-facts.txt
Desktop/Portfolio/rag-saas-chatbot/frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
Desktop/Portfolio/rag-saas-chatbot/frontend/app/: globals.css  layout.tsx  page.tsx
Desktop/Portfolio/rag-saas-chatbot/frontend/app/chat/: page.tsx
Desktop/Portfolio/rag-saas-chatbot/frontend/app/components/: Logo.tsx
Desktop/Portfolio/rag-saas-chatbot/src/: api.py  app.py  chain.py  config.py  embeddings.py  generate.py  ingest.py  retrieve.py  safety.py  skills.py
Desktop/Portfolio/rag-saas-chatbot/vectorstore/51819f5c-4aa6-4515-bc14-cebd06d6a0f1/: index_metadata.pickle
Desktop/Portfolio/rag-saas-chatbot/vectorstore/688efbf7-fa67-4e07-b5f7-ad854b3eb310/: index_metadata.pickle
whatsapps/: .env.example  README.md  package.json  server.js
whatsapps/config/: db.js
whatsapps/models/: Conversation.js
whatsapps/routes/: webhook.js
whatsapps/services/: aiService.js  notificationService.js  whatsappService.js
whatsapps/utils/: intentDetector.js  orderStateMachine.js  promptBuilder.js
