[project]
name = "health-chatbot-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "cryptography>=49.0.0",
    "faker>=40.23.0",
    "fastapi>=0.138.0",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "pyjwt[cryptography]>=2.13.0",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]
